gtk3: Fix xfce4-genmon-plugin bar backgrounds
Bar backgrounds on the genmon xfce4-panel plugin were inconsistent
color between different theme variants, and not visible on the
Arc-Dark variant.

Fixes: https://github.com/jnsh/arc-theme/issues/58

--- a/common/gtk-3.0/3.24/sass/_applications.scss
+++ b/common/gtk-3.0/3.24/sass/_applications.scss
@@ -783,6 +783,11 @@ panel-toplevel.background {
   }
 }
 
+// xfce4-genmon-plugin
+.genmon_progressbar > trough {
+  background-color: if($variant == 'lighter', transparentize(black, 0.85), transparentize(black, 0.75));
+}
+
 %tasklist-button, %panelbutton {
   color: $panel_fg;
   border-radius: 0;
